Añadido estilo a la barra de progreso del video

--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,9 @@
     </video>
 
     <nav class="contentControls">
-      <button class="playControl">Play</button>
+      <div class="buttonsControl">
+        <button class="playControl">Play</button>
+      </div>
       <div class="barControl">
         <div class="barProgress"></div>
       </div>
