Añadido botones para sileciar del video, reproducir en pantalla completa. Se añadió los indicadores de la duración del video y el tiempo transcurrido del mismo. Ahora se muestra ul tooltip indicando el tiempo (minutos y segundos) del video cuando se posiciona el mouse en alguna posición de la barra de progreso.

--- a/test/index.html
+++ b/test/index.html
@@ -17,10 +17,13 @@
     <nav class="contentControls">
       <div class="buttonsControl">
         <button class="playControl">Play</button>
+        <button class="muteControl">Mute</button>
+        <button class="fullscreenControl">FullScreen</button>
       </div>
       <div class="barControl">
         <div class="barProgress"></div>
       </div>
+      <span class="timeLabel">00:00 / 00:00</span>
     </nav>
   </section>
 
