Añadidos iconos svg a los botones de play/pause y silenciar/audio. Se añadió la barra de volumen. Nota: Se detecto un pequeño fallo en el indicador de tiempo cuando se posiciona el cursor en la barra de tiempo, en ocasiones el tiempo mostrado no coincide con el valor real.

--- a/test/index.html
+++ b/test/index.html
@@ -16,14 +16,17 @@
 
     <nav class="contentControls">
       <div class="buttonsControl">
-        <button class="playControl">Play</button>
-        <button class="muteControl">Mute</button>
-        <button class="fullscreenControl">FullScreen</button>
+        <button class="playControl btn"></button>
+        <div class="volumeContent">
+          <button class="muteControl btn"></button>
+          <input type="range" class="volumeControl" id="volumeControl" min="0" max="1" value="1" step="0.01">
+        </div>
       </div>
       <div class="barControl">
         <div class="barProgress"></div>
       </div>
       <span class="timeLabel">00:00 / 00:00</span>
+      <button class="fullscreenControl">FullScreen</button>
     </nav>
   </section>
 
