Optimizada la función del evento de control de volumen. Arreglada y completa la funcionabilidad del video a pantalla completa, también se añadió el icono del mismo.

--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,7 @@
         <div class="barProgress"></div>
       </div>
       <span class="timeLabel">00:00 / 00:00</span>
-      <button class="fullscreenControl">FullScreen</button>
+      <button class="fullscreenControl btn"></button>
     </nav>
   </section>
 
