Añadido contenedor para las etiquetas del video y poder realizar pruebas, se creó la función para renderizar dichas etiquetas a partir de un array de objetos (por ejm: [{value: 000, title:"Algún titulo de etiqueta"}, {value: 100, title:"Titulo 2"}]). A medida que se van renderizando las etiquetas se le van añadiendo eventos para escuchar eventos tipo click y así posicionar el tiempo actual del video al valor de la etiqueta.

--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,7 @@
       <button class="fullscreenControl btn"></button>
     </nav>
   </section>
+  <ul id="tagsContainer"></ul>
 
   <script src="../simpleVideoPlayer.js"></script>
 </body>
