Posicionada la barra contenedora de las etiquetas del video, también se agregaron estilos base para la misma.

--- a/test/index.html
+++ b/test/index.html
@@ -8,28 +8,30 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="simpleVideoPlayer">
-    <video class="media">
-      <source src="../video source sample/The New Google Material Redesign 2018.mp4">
-      <source src="../video source sample/The New Google Material Redesign 2018.ogg">
-    </video>
+  <section class="wrapper">
+    <section id="simpleVideoPlayer">
+      <video class="media">
+        <source src="../video source sample/The New Google Material Redesign 2018.mp4">
+        <source src="../video source sample/The New Google Material Redesign 2018.ogg">
+      </video>
 
-    <nav class="contentControls">
-      <div class="buttonsControl">
-        <button class="playControl btn"></button>
-        <div class="volumeContent">
-          <button class="muteControl btn"></button>
-          <input type="range" class="volumeControl" id="volumeControl" min="0" max="1" value="1" step="0.01">
+      <nav class="contentControls">
+        <div class="buttonsControl">
+          <button class="playControl btn"></button>
+          <div class="volumeContent">
+            <button class="muteControl btn"></button>
+            <input type="range" class="volumeControl" id="volumeControl" min="0" max="1" value="1" step="0.01">
+          </div>
         </div>
-      </div>
-      <div class="barControl">
-        <div class="barProgress"></div>
-      </div>
-      <span class="timeLabel">00:00 / 00:00</span>
-      <button class="fullscreenControl btn"></button>
-    </nav>
+        <div class="barControl">
+          <div class="barProgress"></div>
+        </div>
+        <span class="timeLabel">00:00 / 00:00</span>
+        <button class="fullscreenControl btn"></button>
+      </nav>
+    </section>
+    <ul id="tagsContainer" class="tagsContainer"></ul>
   </section>
-  <ul id="tagsContainer"></ul>
 
   <script src="../simpleVideoPlayer.js"></script>
 </body>
